CMF 2.0.0-alpha (2006/01/22)

  New Features

    - CMFDefault: Added experimental Zope 3-style browser views.
      The views are disabled by default. See README.txt of the browser
      sub-package for further information.

    - skins: All page templates now use unicode.
      Please make sure to pass only 'ascii' strings or unicode to them.

    - CMFDefault utils: Added 'decode' function.
      It decodes values using the default_charset of the site.

    - CMFCore.FSPythonScript:  Customized versions now track the "original"
      source from which they were customized, and can present a diff between
      that version and their current source text.

    - CMFDefault and CMFCalendar: Added locales directories with .pot files.
      A modified i18nextract.py script from Zope 3 is used to extract
      translatable strings from .py, .pt, .html and .xml files.

    - CMFDefault.MetadataTool:  support arbitrary additional schemas.
      The "stock" DublinCore-specific API is still accessible, implemented
      via a special "DCMI" subobject.

    - WorkflowTool and DCWorkflow: Improved add form for workflow objects.
      Presettings can now be loaded from workflow settings in setup profiles.
      This replaces the feature that did allow to load presettings from the
      oldstyle workflow factories registry.

    - WorkflowTool: Switched to generic plug-in mechanism for workflows.
      Any class registered for IWorkflowDefinition can now be used in the
      WorkflowTool.

    - DCWorkflow: Added 'revision2' profile.
      This replaces the hardcoded 'Revision 2' default workflow.

    - CMFActionIcons, CMFCalendar, CMFDefault, CMFTopic, CMFUid:
      use the new 'for_' argument in GenericSetup's profile registry API
      to indicate that profiles are intended for CMFCore's ISiteRoot sites.

    - CMFTopic:  added specialized GenericSetup support for topics, to
      allow capturing criteria in a single XML file.
