@@ -1,0 +1,2 @@
+# This file has UNIX line endings (\n) on purpose
+return 'unix'
