@@ -1,3 +1,12 @@
+HEAD only (unreleased)
+  
+  Bug Fixes
+
+    - In certain circumstances file-based PythonScripts with foreign line
+      endings were not handled correctly. PythonScripts are now read using
+      python's universal line-endings support.
+      (http://www.zope.org/Collectors/CMF/403)
+      
 CMF 2.0.0-alpha (2006/01/22)
 
   New Features
